Sources/sdk/sccio.h

#define IO_OSHANDLETYPE VTHANDLE
typedef NSFileHandle   *IO_OSHANDLETYPE;
typedef VTLPVOID          IO_OSHANDLETYPE;
#define IO_OSHANDLETYPE int
#define IO_OSHANDLETYPE int
  /*
  |  Defines for dwType in IOOPEN function
  */

#define IOTYPE_DOSPATH                1
#define IOTYPE_OEMPATH                IOTYPE_DOSPATH
#define IOTYPE_ANSIPATH               2
#define IOTYPE_MACPATH                3
#define IOTYPE_UNICODEPATH            4
#define IOTYPE_MACFSSPEC              5
#define IOTYPE_MACHFS                 6
#define IOTYPE_TEMP                   7
#define IOTYPE_RANGE                  8
#define IOTYPE_SECONDARY              9
#define IOTYPE_ISTREAM                10
#define IOTYPE_SUBSTREAM              11
#define IOTYPE_SUBSTORAGE             12
#define IOTYPE_REDIRECT               13
#define IOTYPE_ISTORAGE               14
#define IOTYPE_UNIXPATH               15
#define IOTYPE_SUBOBJECT              16
#define IOTYPE_REMOTEFILTERACCESS     17
#define IOTYPE_CHUNKER                18
#define IOTYPE_COMPRESS               19
#define IOTYPE_SECONDARYFULL          20
#define IOTYPE_IOSPEC                 21    /* reserved */
#define IOTYPE_MEMORY                 22
/*** for using an open file handle, See sccda.c ***/
#define IOTYPE_HANDLE                 23
/*** IOTYPE_URL reserved for Transformation Server */
#define IOTYPE_URL                    24
#define IOTYPE_FITEMP                 25
#define IOTYPE_PATH                   26  /* generic file system path (used by transformation server) */
#define IOTYPE_LOCATOR                27  /* IOLOCATOR path */
#define IOTYPE_LINKEDOBJECT           28  /* Linked object (attachment).  */
#define IOTYPE_ARCHIVEOBJECT          29  /* Used in DAOpenDocument to open Archive Nodes*/
/* These IOTYPEs were added to support writable OLE2 using
* Microsoft's interface.
*/
#define IOTYPE_MSTREAM                30
#define IOTYPE_MSTORAGE               31
#define IOTYPE_MROOTSTORAGE           32
/* These IOTYPEs were added to support writable OLE2 using
* our portable interface.
*/
#define IOTYPE_OLE2STREAM             33
#define IOTYPE_OLE2STORAGE            34
#define IOTYPE_OLE2ROOTSTORAGE        35
/* added to support OLE Package embeddings */
#define IOTYPE_OLEPACKAGE             36
/* added for DASaveObject */
#define IOTYPE_OBJECT                 37
/* added for in-memory temp files */
#define IOTYPE_PHYSICALTEMP           38
/* support for zip archive files */
#define IOTYPE_ZIPFILE                39
#define IOTYPE_ZIPNODE                40
/* support for cab files */
#define IOTYPE_CABINET                41
#define IOTYPE_CABFILE                42
#define IOTYPE_WIN32VPATH IOTYPE_ANSIPATH
#define IOTYPE_WIN32VPATH IOTYPE_UNIXPATH
#define IOTYPE_WIN32VPATH IOTYPE_DOSPATH
  /*** Only used by DA to request opening a file requested through DASaveTreeNode */
#define IOTYPE_USERREQUEST        29
  /*
  |  Structures passed to IOOPEN function
  */

typedef struct IOSPECMACHFStag
{
    short       vRefNum;
    VTLONG      dirId;
    VTTCHAR     fileName[256];
} IOSPECMACHFS, * PIOSPECMACHFS;
typedef struct IOSPECRANGEtag
{
    HIOFILE     hRefFile;
#ifdef SCCFEATURE_64BITIO
    VTOFF_T       dwFirstByte;
    VTOFF_T       dwLastByte;
#else
    VTDWORD     dwFirstByte;
    VTDWORD     dwLastByte;
#endif
} IOSPECRANGE, * PIOSPECRANGE;
typedef struct IOSPECCOMPRESStag
{
    HIOFILE     hRefFile;
    VTDWORD     dwFlags;
    VTDWORD     dwType;         /* type of compression */
    VTDWORD     dwReserved1;
    VTDWORD     dwReserved2;
    VTDWORD     dwReserved3;
    VTSYSVAL    pResPointer1;
} IOSPECCOMPRESS, * PIOSPECCOMPRESS;
typedef struct IOSPECSECONDARYtag
{
    HIOFILE     hRefFile;
    VTTCHAR     szFileName[256];
} IOSPECSECONDARY, * PIOSPECSECONDARY;
typedef struct IOSPECSUBSTREAMtag
{
    HIOFILE     hRefStorage;
    VTTCHAR     szStreamName[256];
} IOSPECSUBSTREAM, * PIOSPECSUBSTREAM;
typedef struct IOSPECSUBSTORAGEtag
{
    HIOFILE     hRefStorage;
    VTTCHAR     szStorageName[256];
} IOSPECSUBSTORAGE, * PIOSPECSUBSTORAGE;
typedef struct IOSPECMROOTSTORAGEtag
{
    /* Through NTFS, the maximum filename size is 255 UNICODE
    * characters plus the terminator.
    */
    HIOFILE     hRefFile;
    VTTCHAR     szFileName[512];
    VTDWORD     dwFlags;
}
IOSPECMROOTSTORAGE, * PIOSPECMROOTSTORAGE;
typedef struct IOSPECMSTREAMtag
{
    HIOFILE     hRefStorage;
    /* Maximum stream name size is 31 UNICODE characters
    * plus the terminator.
    */
    VTTCHAR     szStreamName[256];
}
IOSPECMSTREAM, * PIOSPECMSTREAM;
typedef struct IOSPECMSTORAGEtag
{
    HIOFILE     hRefStorage;
    /* Maximum storage name size is 31 UNICODE characters
    * plus the terminator.
    */
    VTTCHAR     szStorageName[256];
}
IOSPECMSTORAGE, * PIOSPECMSTORAGE;
/* These mirror the STGM defines in objbase.h */
#define SCC_STGM_CREATE             0x00001000L
#define SCC_STGM_DIRECT             0x00000000L
#define SCC_STGM_READWRITE          0x00000002L
#define SCC_STGM_SHARE_EXCLUSIVE    0x00000010L
#define SCC_STGM_SHARE_DENY_WRITE   0x00000020L
#define SCC_STGM_DELETEONRELEASE    0x04000000L
typedef struct IOSPECOLE2ROOTSTORAGEtag
        {
        HIOFILE     hRefFile;
        VTTCHAR     szFileName[512];
        VTDWORD     dwFlags;
        } IOSPECOLE2ROOTSTORAGE, * PIOSPECOLE2ROOTSTORAGE;
/* When opening an OLE2 root storage, we can wrap the provided
* reference file and not re-open it on OLE2 document open and
* not close it on OLE2 document close.  Normal behavior is to
* create/open a new file that the OLE2 document owns and let it
* close it on document close.
*/
#define SCC_WRAP_REFERENCE_FILE     0x00000001
typedef struct IOSPECOLE2STREAMtag
        {
        HIOFILE     hRefStorage;
        VTTCHAR     szStreamName[256];
        } IOSPECOLE2STREAM, * PIOSPECOLE2STREAM;
typedef struct IOSPECOLE2STORAGEtag
        {
        HIOFILE     hRefStorage;
        VTTCHAR     szStorageName[256];
        } IOSPECOLE2STORAGE, * PIOSPECOLE2STORAGE;
typedef struct IOSPECSUBOBJECTtag
{
    VTDWORD     dwStructSize;
    VTSYSPARAM  hDoc;  /* VTHDOC is Defined in SCCDA.H, which is not included here */
    VTDWORD     dwObjectId;
    VTDWORD     dwStreamId;
    VTDWORD     dwReserved1;
    VTDWORD     dwReserved2;
} IOSPECSUBOBJECT, * PIOSPECSUBOBJECT;
/* used to access items in zip archive files,
 * added for MS Office 12 support */
typedef struct IOSPECZIPNODEtag
{
    HIOFILE                 hRefFile;   /* zip file (block I/O) */

    VTCHAR                  szNodeName[512];
} IOSPECZIPNODE, * PIOSPECZIPNODE;
/* used to access items in cabinet archive files */
typedef struct IOSPECCABFILEtag
{
    HIOFILE                 hRefFile;   /* cab file (block I/O) */

    VTWORD                  wFlags;         /* see values below */
    VTWORD                  wFileIndex;     /* file index */
    VTWORD                  wszFileName[512];/* null terminated file name */
} IOSPECCABFILE, * PIOSPECCABFILE;
/* possible values for IOSPECCABNODE.dwFlags */
#define IO_CABFLAG_INDEX    0x0000
#define IO_CABFLAG_NAME     0x0001
/* used for archive objects in DA */
typedef struct IOSPECARCHIVEOBJECTtag
{
    VTDWORD dwStructSize;
    VTSYSPARAM hDoc;        /* Parent Doc hDoc. VTHDOC is Defined in SCCDA.H, which is not included here */
    VTDWORD dwNodeId;       /* Node ID */
    VTDWORD dwStreamId;     /* I'm not sure if this is necessary */
    VTDWORD dwReserved1;    /* Must always be 0 */
    VTDWORD dwReserved2;    /* Must always be 0 */
} IOSPECARCHIVEOBJECT, * PIOSPECARCHIVEOBJECT;
/*
    Linked objects.
*/
typedef struct IOSPECLINKEDOBJECTtag
{
    VTDWORD     dwStructSize;
    VTSYSPARAM  hDoc;         /*  VTHDOC is Defined in SCCDA.H, which is not included here */
    VTDWORD     dwObjectId;   /*  Object identifier.  */
    VTDWORD     dwType;       /*  Linked Object type.  (SO_LOCATORTYPE_*)  */
    VTDWORD     dwParam1;     /*  Parameter for DoSpecial call.  */
    VTDWORD     dwParam2;     /*  Parameter for DoSpecial call.  */
    VTDWORD     dwReserved1;  /*  Unused.  */
    VTDWORD     dwReserved2;  /*  Unused.  */
} IOSPECLINKEDOBJECT, * PIOSPECLINKEDOBJECT;
#define IO_FILEOPEN    0x0001
#define IO_FILEISTEMP  0x0002
typedef struct IOLOCATORSEGMENTtag
{
    VTDWORD    dwType;  /* Locator type (SO_LOCATORTYPE_* from sodefs.h) */
    VTSYSPARAM param1;  /* Parameter 1, use depends on locator segment type:
                           OLEPATH, FILENAME, HYPERLINK, BOOKMARK:  Pointer to double-byte string
                           SECTION:            Section number
                           TAGREFERENCE:       Tag ID
                           DOSPECIAL:          Optional parameter
                           RANGE:              Offset
                           WINDOWSRESOURCE:    Resource type
                           COMPRESSION:        Compression type */
    VTSYSPARAM param2;  /* Parameter 2, use depends on locator segment type:
                           OLEPATH, FILENAME, HYPERLINK, BOOKMARK:  Length of double-byte string
                           DOSPECIAL:          Optional parameter
                           RANGE:              Length
                           WINDOWSRESOURCE:    Resource ID
                           COMPRESSION:        Compression flags */
} IOLOCATORSEGMENT, * PIOLOCATORSEGMENT;
typedef struct IOLOCATORtag
{
    VTDWORD           dwStructSize;   /* sizeof(IOLOCATOR) */
    VTSYSPARAM        hDoc;           /* VTHDOC is Defined in SCCDA.H, which is not included here */
    VTDWORD           dwSegmentCount; /* Number of segments in this locator */
    IOLOCATORSEGMENT* pSegments;      /* Pointer to an array of locator segments */
} IOLOCATOR, * PIOLOCATOR;
#define IOLOCATOR_MAXSEGMENTS  256
  /*
  |  Structure used for specifying the date and time of a file.
  */
typedef struct IODATETIMEtag
{
    VTDWORD         dwYear;     /* Year A.D. */
    VTDWORD         dwMonth;    /* Month, Jan == 1 */
    VTDWORD         dwDay;      /* Day of month */
    VTDWORD         dwTime;     /* Number of miliseconds since midnight */
}IODATETIME, * PIODATETIME;
typedef struct IORFAREQUESTtag
{
    VTDWORD     dwReserved1;
    VTDWORD     dwReserved2;
    VTDWORD     dwReserved3;
    VTDWORD     dwReserved4;
} IORFAREQUEST, * PIORFAREQUEST;
/* LOWORD of request is one of the following: */
#define RAREQ_CHUNKERDATA    1
#define RAREQ_RAWDATA        2
typedef IOERR (IO_ENTRYMODPTR IOGETREMOTEDATAPROC) (HIOFILE hFile, PIORFAREQUEST pRequest, VTVOID * *ppData, VTDWORD *pdwDataSize);
typedef IOERR (IO_ENTRYMODPTR IOCLOSEREMOTEDATAPROC)(HIOFILE hFile);
typedef IOERR (IO_ENTRYMODPTR IOOPENREMOTESUBOBJECTPROC)(HIOFILE hFile, VTDWORD dwObjectId, VTDWORD dwStreamId, VTDWORD dwReserved1, VTDWORD dwReserved2, VTDWORD * pdwSpecType, VTVOID * *pSpec);
#define IOGetInfo(a,b,c)     ((PBASEIO)(a))->pGetInfo(a,b,c)
/* Added for writable ole2. */
IO_ENTRYSC IOERR IO_ENTRYMOD IOSetInfo(HIOFILE hFile, VTDWORD dwType, VTDWORD dwInfoId, VTVOID * pInfo);