Sources/sccio.pas


//{$ifdef UNIX}
//{$if defined(_DARWIN_SOURCE)}
//{$if defined(__OBJC__)}
//
//  type
//
//     PIO_OSHANDLETYPE = ^IO_OSHANDLETYPE;
//     IO_OSHANDLETYPE = NSFileHandle;
//{$else}
//
//  type
//
//     PIO_OSHANDLETYPE = ^IO_OSHANDLETYPE;
//     IO_OSHANDLETYPE = VTLPVOID;
//{$endif}
//  { __OBJC__  }
//{$else}
//
//  const
//     IO_OSHANDLETYPE = longint;
//{$endif}
//  { Mac OS X  }
//{$endif}
//  {UNIX }
//{$ifdef NLM}
//
//  const
//     IO_OSHANDLETYPE = longint;
//{$endif}
//  {NLM }
  {
    |  Defines for dwType in IOOPEN function
     }

  const
     IOTYPE_DOSPATH = 1;
     IOTYPE_OEMPATH = IOTYPE_DOSPATH;
     IOTYPE_ANSIPATH = 2;
     IOTYPE_MACPATH = 3;
     IOTYPE_UNICODEPATH = 4;
     IOTYPE_MACFSSPEC = 5;
     IOTYPE_MACHFS = 6;
     IOTYPE_TEMP = 7;
     IOTYPE_RANGE = 8;
     IOTYPE_SECONDARY = 9;
     IOTYPE_ISTREAM = 10;
     IOTYPE_SUBSTREAM = 11;
     IOTYPE_SUBSTORAGE = 12;     
     IOTYPE_REDIRECT = 13;     
     IOTYPE_ISTORAGE = 14;     
     IOTYPE_UNIXPATH = 15;     
     IOTYPE_SUBOBJECT = 16;     
     IOTYPE_REMOTEFILTERACCESS = 17;     
     IOTYPE_CHUNKER = 18;     
     IOTYPE_COMPRESS = 19;     
     IOTYPE_SECONDARYFULL = 20;     
  { reserved  }
     IOTYPE_IOSPEC = 21;     
     IOTYPE_MEMORY = 22;     
  {** for using an open file handle, See sccda.c ** }
     IOTYPE_HANDLE = 23;     
  {** IOTYPE_URL reserved for Transformation Server  }
     IOTYPE_URL = 24;     
     IOTYPE_FITEMP = 25;     
  { generic file system path (used by transformation server)  }
     IOTYPE_PATH = 26;     
  { IOLOCATOR path  }
     IOTYPE_LOCATOR = 27;     
  { Linked object (attachment).   }
     IOTYPE_LINKEDOBJECT = 28;     
  { Used in DAOpenDocument to open Archive Nodes }
     IOTYPE_ARCHIVEOBJECT = 29;     
  { These IOTYPEs were added to support writable OLE2 using
  * Microsoft's interface.
   }
     IOTYPE_MSTREAM = 30;     
     IOTYPE_MSTORAGE = 31;     
     IOTYPE_MROOTSTORAGE = 32;     
  { These IOTYPEs were added to support writable OLE2 using
  * our portable interface.
   }
     IOTYPE_OLE2STREAM = 33;     
     IOTYPE_OLE2STORAGE = 34;     
     IOTYPE_OLE2ROOTSTORAGE = 35;     
  { added to support OLE Package embeddings  }
     IOTYPE_OLEPACKAGE = 36;     
  { added for DASaveObject  }
     IOTYPE_OBJECT = 37;     
  { added for in-memory temp files  }
     IOTYPE_PHYSICALTEMP = 38;     
  { support for zip archive files  }
     IOTYPE_ZIPFILE = 39;     
     IOTYPE_ZIPNODE = 40;     
  { support for cab files  }
     IOTYPE_CABINET = 41;     
     IOTYPE_CABFILE = 42;
{$ifdef WINDOWS}
     IOTYPE_WIN32VPATH = IOTYPE_ANSIPATH;
{$endif}

//{$ifdef UNIX}
//  const
//     IOTYPE_WIN32VPATH = IOTYPE_UNIXPATH;
//{$endif}
//{$ifdef NLM}
//
//  const
//     IOTYPE_WIN32VPATH = IOTYPE_DOSPATH;
//{$endif}
  {** Only used by DA to request opening a file requested through DASaveTreeNode  }

  const
     IOTYPE_USERREQUEST = 29;
  {
    |  Structures passed to IOOPEN function
     }

  type

     PIOSPECMACHFS = ^IOSPECMACHFS;
     IOSPECMACHFS = record
          vRefNum : smallint;
          dirId : VTLONG;
          fileName : array[0..255] of VTTCHAR;
       end;
     PPIOSPECMACHFS = ^PIOSPECMACHFS;

  type
     PIOSPECRANGE = ^IOSPECRANGE;
     IOSPECRANGE = record
          hRefFile : HIOFILE;
{$ifdef SCCFEATURE_64BITIO}
          dwFirstByte : VTOFF_T;
          dwLastByte : VTOFF_T;
{$else}
          dwFirstByte : VTDWORD;
          dwLastByte : VTDWORD;
{$endif}
       end;
     PPIOSPECRANGE = ^PIOSPECRANGE;
  { type of compression  }

     PIOSPECCOMPRESS = ^IOSPECCOMPRESS;
     IOSPECCOMPRESS = record
          hRefFile : HIOFILE;
          dwFlags : VTDWORD;
          dwType : VTDWORD;
          dwReserved1 : VTDWORD;
          dwReserved2 : VTDWORD;
          dwReserved3 : VTDWORD;
          pResPointer1 : VTSYSVAL;
       end;
     PPIOSPECCOMPRESS = ^PIOSPECCOMPRESS;

     PIOSPECSECONDARY = ^IOSPECSECONDARY;
     IOSPECSECONDARY = record
          hRefFile : HIOFILE;
          szFileName : array[0..255] of VTTCHAR;
       end;
     PPIOSPECSECONDARY = ^PIOSPECSECONDARY;

     PIOSPECSUBSTREAM = ^IOSPECSUBSTREAM;
     IOSPECSUBSTREAM = record
          hRefStorage : HIOFILE;
          szStreamName : array[0..255] of VTTCHAR;
       end;
     PPIOSPECSUBSTREAM = ^PIOSPECSUBSTREAM;

     PIOSPECSUBSTORAGE = ^IOSPECSUBSTORAGE;
     IOSPECSUBSTORAGE = record
          hRefStorage : HIOFILE;
          szStorageName : array[0..255] of VTTCHAR;
       end;
     PPIOSPECSUBSTORAGE = ^PIOSPECSUBSTORAGE;
  { Through NTFS, the maximum filename size is 255 UNICODE
      * characters plus the terminator.
       }

     PIOSPECMROOTSTORAGE = ^IOSPECMROOTSTORAGE;
     IOSPECMROOTSTORAGE = record
          hRefFile : HIOFILE;
          szFileName : array[0..511] of VTTCHAR;
          dwFlags : VTDWORD;
       end;
     PPIOSPECMROOTSTORAGE = ^PIOSPECMROOTSTORAGE;
  { Maximum stream name size is 31 UNICODE characters
      * plus the terminator.
       }

     PIOSPECMSTREAM = ^IOSPECMSTREAM;
     IOSPECMSTREAM = record
          hRefStorage : HIOFILE;
          szStreamName : array[0..255] of VTTCHAR;
       end;
     PPIOSPECMSTREAM = ^PIOSPECMSTREAM;
  { Maximum storage name size is 31 UNICODE characters
      * plus the terminator.
       }

     PIOSPECMSTORAGE = ^IOSPECMSTORAGE;
     IOSPECMSTORAGE = record
          hRefStorage : HIOFILE;
          szStorageName : array[0..255] of VTTCHAR;
       end;
     PPIOSPECMSTORAGE = ^PIOSPECMSTORAGE;
  { Parameters to the IOGetInfo() / IOSetInfo() calls for Microsoft OLE2.  }

  const
  { These mirror the STGM defines in objbase.h  }
     SCC_STGM_CREATE = $00001000;
     SCC_STGM_DIRECT = $00000000;
     SCC_STGM_READWRITE = $00000002;
     SCC_STGM_SHARE_EXCLUSIVE = $00000010;
     SCC_STGM_SHARE_DENY_WRITE = $00000020;
     SCC_STGM_DELETEONRELEASE = $04000000;

  type

     PIOSPECOLE2ROOTSTORAGE = ^IOSPECOLE2ROOTSTORAGE;
     IOSPECOLE2ROOTSTORAGE = record
          hRefFile : HIOFILE;
          szFileName : array[0..511] of VTTCHAR;
          dwFlags : VTDWORD;
       end;
     PPIOSPECOLE2ROOTSTORAGE = ^PIOSPECOLE2ROOTSTORAGE;
  { When opening an OLE2 root storage, we can wrap the provided
  * reference file and not re-open it on OLE2 document open and
  * not close it on OLE2 document close.  Normal behavior is to
  * create/open a new file that the OLE2 document owns and let it
  * close it on document close.
   }

  const
     SCC_WRAP_REFERENCE_FILE = $00000001;

  type

     PIOSPECOLE2STREAM = ^IOSPECOLE2STREAM;
     IOSPECOLE2STREAM = record
          hRefStorage : HIOFILE;
          szStreamName : array[0..255] of VTTCHAR;
       end;
     PPIOSPECOLE2STREAM = ^PIOSPECOLE2STREAM;

     PIOSPECOLE2STORAGE = ^IOSPECOLE2STORAGE;
     IOSPECOLE2STORAGE = record
          hRefStorage : HIOFILE;
          szStorageName : array[0..255] of VTTCHAR;
       end;
     PPIOSPECOLE2STORAGE = ^PIOSPECOLE2STORAGE;
  { VTHDOC is Defined in SCCDA.H, which is not included here  }

     PIOSPECSUBOBJECT = ^IOSPECSUBOBJECT;
     IOSPECSUBOBJECT = record
          dwStructSize : VTDWORD;
          hDoc : VTSYSPARAM;
          dwObjectId : VTDWORD;
          dwStreamId : VTDWORD;
          dwReserved1 : VTDWORD;
          dwReserved2 : VTDWORD;
       end;
     PPIOSPECSUBOBJECT = ^PIOSPECSUBOBJECT;
  { used to access items in zip archive files,
   * added for MS Office 12 support  }
  { zip file (block I/O)  }

     PIOSPECZIPNODE = ^IOSPECZIPNODE;
     IOSPECZIPNODE = record
          hRefFile : HIOFILE;
          szNodeName : array[0..511] of VTCHAR;
       end;
     PPIOSPECZIPNODE = ^PIOSPECZIPNODE;
  { used to access items in cabinet archive files  }
  { cab file (block I/O)  }
  { see values below  }
  { file index  }
  { null terminated file name  }

     PIOSPECCABFILE = ^IOSPECCABFILE;
     IOSPECCABFILE = record
          hRefFile : HIOFILE;
          wFlags : VTWORD;
          wFileIndex : VTWORD;
          wszFileName : array[0..511] of VTWORD;
       end;
     PPIOSPECCABFILE = ^PIOSPECCABFILE;
  { possible values for IOSPECCABNODE.dwFlags  }

  const
     IO_CABFLAG_INDEX = $0000;
     IO_CABFLAG_NAME = $0001;
  { used for archive objects in DA  }
  { Parent Doc hDoc. VTHDOC is Defined in SCCDA.H, which is not included here  }
  { Node ID  }
  { I'm not sure if this is necessary  }
  { Must always be 0  }
  { Must always be 0  }

  type

     PIOSPECARCHIVEOBJECT = ^IOSPECARCHIVEOBJECT;
     IOSPECARCHIVEOBJECT = record
          dwStructSize : VTDWORD;
          hDoc : VTSYSPARAM;
          dwNodeId : VTDWORD;
          dwStreamId : VTDWORD;
          dwReserved1 : VTDWORD;
          dwReserved2 : VTDWORD;
       end;
     PPIOSPECARCHIVEOBJECT = ^PIOSPECARCHIVEOBJECT;
  {
      Linked objects.
   }
  {  VTHDOC is Defined in SCCDA.H, which is not included here  }
  {  Object identifier.   }
  {  Linked Object type.  (SO_LOCATORTYPE_*)   }
  {  Parameter for DoSpecial call.   }
  {  Parameter for DoSpecial call.   }
  {  Unused.   }
  {  Unused.   }

     PIOSPECLINKEDOBJECT = ^IOSPECLINKEDOBJECT;
     IOSPECLINKEDOBJECT = record
          dwStructSize : VTDWORD;
          hDoc : VTSYSPARAM;
          dwObjectId : VTDWORD;
          dwType : VTDWORD;
          dwParam1 : VTDWORD;
          dwParam2 : VTDWORD;
          dwReserved1 : VTDWORD;
          dwReserved2 : VTDWORD;
       end;
     PPIOSPECLINKEDOBJECT = ^PIOSPECLINKEDOBJECT;

  const
     IO_FILEOPEN = $0001;
     IO_FILEISTEMP = $0002;
  { Locator type (SO_LOCATORTYPE_* from sodefs.h)  }
  { Parameter 1, use depends on locator segment type:
                             OLEPATH, FILENAME, HYPERLINK, BOOKMARK:  Pointer to double-byte string
                             SECTION:            Section number
                             TAGREFERENCE:       Tag ID
                             DOSPECIAL:          Optional parameter
                             RANGE:              Offset
                             WINDOWSRESOURCE:    Resource type
                             COMPRESSION:        Compression type  }
  { Parameter 2, use depends on locator segment type:
                             OLEPATH, FILENAME, HYPERLINK, BOOKMARK:  Length of double-byte string
                             DOSPECIAL:          Optional parameter
                             RANGE:              Length
                             WINDOWSRESOURCE:    Resource ID
                             COMPRESSION:        Compression flags  }

  type

     PIOLOCATORSEGMENT = ^IOLOCATORSEGMENT;
     IOLOCATORSEGMENT = record
          dwType : VTDWORD;
          param1 : VTSYSPARAM;
          param2 : VTSYSPARAM;
       end;
     PPIOLOCATORSEGMENT = ^PIOLOCATORSEGMENT;
  { sizeof(IOLOCATOR)  }
  { VTHDOC is Defined in SCCDA.H, which is not included here  }
  { Number of segments in this locator  }
  { Pointer to an array of locator segments  }

     PIOLOCATOR = ^IOLOCATOR;
     IOLOCATOR = record
          dwStructSize : VTDWORD;
          hDoc : VTSYSPARAM;
          dwSegmentCount : VTDWORD;
          pSegments : PIOLOCATORSEGMENT;
       end;
     PPIOLOCATOR = ^PIOLOCATOR;

  const
     IOLOCATOR_MAXSEGMENTS = 256;
  {
    |  Structure used for specifying the date and time of a file.
     }
  { Year A.D.  }
  { Month, Jan == 1  }
  { Day of month  }
  { Number of miliseconds since midnight  }

  type

     PIODATETIME = ^IODATETIME;
     IODATETIME = record
          dwYear : VTDWORD;
          dwMonth : VTDWORD;
          dwDay : VTDWORD;
          dwTime : VTDWORD;
       end;
     PPIODATETIME = ^PIODATETIME;

     PIORFAREQUEST = ^IORFAREQUEST;
     IORFAREQUEST = record
          dwReserved1 : VTDWORD;
          dwReserved2 : VTDWORD;
          dwReserved3 : VTDWORD;
          dwReserved4 : VTDWORD;
       end;
     PPIORFAREQUEST = ^PIORFAREQUEST;
  { LOWORD of request is one of the following:  }

  const
     RAREQ_CHUNKERDATA = 1;
     RAREQ_RAWDATA = 2;

  type
